<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="above">Above</string>
    <string name="above_target_level">Above target level</string>
    <string name="accept">Accept</string>
    <string name="add_email">Add Email</string>
    <string name="alcohol">Alcohol</string>
    <string name="alert">Alert</string>
    <string name="alert_detail_glucose_value">Glucose Value:</string>
    <string name="alert_detail_threshold">Threshold:</string>
    <string name="alert_notice">Alert Notice</string>
    <string name="alert_settings">Alert settings</string>
    <string name="all">All</string>
    <string name="allergy">Allergy</string>
    <string name="and">and</string>
    <string name="android_device_info">Android Device Info</string>
    <string name="android_version">Android Version</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_update_body">An upgrade is available for your Eversense App. Would you like to install it now?</string>
    <string name="app_update_title">Upgrade Eversense App</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_sync">Auto Sync</string>
    <string name="auto_sync_enabled_text">"Auto Sync is Enabled.
Your data will be synced to the server every 2 hours."</string>
    <string name="auto_sync_enabled_text_2">"Auto Sync is Enabled.
Your data will be synced to the server every %1$d minutes."</string>
    <string name="average">Average</string>
    <string name="avg">Avg.</string>
    <string name="battery_error_alarm_message">"The system has detected a problem with your smart transmitter's battery. You can continue to use your system, but please contact Customer Support for a replacement transmitter."</string>
    <string name="battery_error_alarm_title">Battery Error</string>
    <string name="battery_level">Battery Level</string>
    <string name="battery_optimization_message">To ensure you receive Eversense alerts without delay, you must turn off battery optimization for the Eversense App in your mobile device settings.</string>
    <string name="battery_optimization_title">App Performance</string>
    <string name="battery_percent">Battery %1$s</string>
    <string name="below">Below</string>
    <string name="below_target_level">Below target level</string>
    <string name="between">between</string>
    <string name="ble_not_supported">Bluetooth low energy is not supported</string>
    <string name="bluetooth_is_off">Bluetooth is OFF</string>
    <string name="bluetooth_pairing">Bluetooth Pairing</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="breakfast">Breakfast</string>
    <string name="cal_accepted_in_progress_message">Please do not remove the transmitter from the sensor site for %1$d minutes. If the Transmitter is removed, the calibration must be repeated.</string>
    <string name="cal_accepted_in_progress_suspicious_message">"Please do not remove the transmitter from the sensor site for %1$d minutes. If the transmitter is removed, the calibration must be repeated.

Important: The calibration value of %2$s is very different from the sensor glucose. Once calibration is complete, the system may prompt you to enter a new calibration."</string>
    <string name="cal_accepted_in_progress_title">Calibration in Progress</string>
    <string name="cal_accepted_message_2">"Your blood glucose value has been successfully used for calibration.

Warning: Your Transmitter should not be removed from the sensor for %1$d minutes. If the Transmitter is removed, the calibration will need to be repeated."</string>
    <string name="cal_accepted_title">Calibration Accepted</string>
    <string name="cal_in_progress">Calibration in progress (%1$d min, %2$d sec)</string>
    <string name="cal_not_entered_message">Your blood glucose value has been recorded, but was not entered for calibration.</string>
    <string name="cal_not_entered_title">Calibration Not Entered</string>
    <string name="cal_not_used_reason_text">Reason Not Used for Calibration</string>
    <string name="cal_rejected_auto_link_message">Your blood glucose value was not used for calibration because Auto Link Mode is active. Please disable Auto Link Mode before entering a calibration.</string>
    <string name="cal_rejected_auto_link_title">"Calibration Rejected
(Auto Link Mode)"</string>
    <string name="cal_rejected_blinded_message_2">Your blood glucose value was not used for calibration. Please wait %1$d hour(s) and try again.</string>
    <string name="cal_rejected_blinded_title">"Calibration Rejected
(Blinded)"</string>
    <string name="cal_rejected_cannot_be_used_title">Calibration Cannot be Used</string>
    <string name="cal_rejected_change_rapid_message">The system is unable to use this calibration value because your glucose is changing too rapidly. Please calibrate again when glucose rate of change is more steady. This entry will be logged as a BG entry.</string>
    <string name="cal_rejected_data_message_2">Your blood glucose value not used for calibration because not enough Sensor Glucose data exists. Please ensure your Transmitter is placed over the sensor, wait %1$d minutes, and try again.</string>
    <string name="cal_rejected_data_message_3">Your blood glucose value was not used for calibration because not enough Sensor Glucose data exists. Please ensure your Transmitter is placed over the sensor, wait %1$d minutes, and try again.</string>
    <string name="cal_rejected_data_title">"Calibration Rejected
(Not Enough Data)"</string>
    <string name="cal_rejected_high_message">Blood glucose values more than %1$s cannot be used for calibration. Please take appropriate action and calibrate again when glucose is between %2$s and %3$s. This entry will be logged as a BG entry.</string>
    <string name="cal_rejected_low_message">Blood glucose values less than %1$s cannot be used for calibration. Please take appropriate action and calibrate again when glucose is between %2$s and %3$s. This entry will be logged as a BG entry.</string>
    <string name="cal_rejected_not_ready_message_2">Your blood glucose value was not used for calibration because the sample was taken prior to when the Transmitter was ready to accept calibration. Please wait %1$d minutes and try again.</string>
    <string name="cal_rejected_not_ready_title">"Calibration Rejected
(Not Ready)"</string>
    <string name="cal_rejected_other_message">Your blood glucose value was not used for calibration due to an unknown failure.</string>
    <string name="cal_rejected_other_title">"Calibration Rejected
(Other Failure)"</string>
    <string name="cal_rejected_rate_message_2">Your blood glucose value was not used for calibration because the glucose rate is changing too rapidly. Please wait %1$d hour(s) and try again.</string>
    <string name="cal_rejected_rate_title">"Calibration Rejected
(High Rate of Change)"</string>
    <string name="cal_rejected_replacement_message">Your blood glucose value was not used for calibration because your Sensor needs to be replaced. Please contact your physician to have your Sensor replaced.</string>
    <string name="cal_rejected_replacement_message_hcp">Your blood glucose value was not used for calibration because your Sensor needs to be replaced. Please contact your health care provider to have your Sensor replaced.</string>
    <string name="cal_rejected_replacement_title">"Calibration Rejected
(Sensor Replacement Required)"</string>
    <string name="cal_rejected_sensor_replace_message">The system is unable to use this calibration value because your sensor needs to be replaced. This entry will be logged as a BG entry.</string>
    <string name="cal_rejected_too_different_message_2">Your entered calibration value of %1$s may be inaccurate. Please calibrate again in %2$d hour to ensure glucose accuracy.</string>
    <string name="cal_rejected_too_different_title">Calibration Under Review</string>
    <string name="cal_rejected_too_high_message_2">Blood glucose values over %1$s cannot be used for calibration. Please take appropriate action and try again in %2$d hour(s).</string>
    <string name="cal_rejected_too_high_title">"Calibration Rejected
(Too High)"</string>
    <string name="cal_rejected_too_low_message_2">Blood glucose values less than %1$s cannot be used for calibration. Please take appropriate action and try again in %2$d hour(s).</string>
    <string name="cal_rejected_too_low_title">"Calibration Rejected
(Too Low)"</string>
    <string name="cal_rejected_unable_to_use_message">The system is unable to use this calibration value. This entry will be logged as a BG entry.</string>
    <string name="cal_rejected_unknown_message">Your blood glucose value was not used for calibration due to an unknown reason. Please try again later.</string>
    <string name="cal_rejected_unknown_title">"Calibration Rejected
(Unknown Failure)"</string>
    <string name="calibration_info">Calibration Information</string>
    <string name="cancel">Cancel</string>
    <string name="completed_cals">Completed Cals</string>
    <string name="current_phase">Current Phase</string>
    <string name="demo">DEMO</string>
    <string name="demonstration">Demonstration</string>
    <string name="device_info">Device Information</string>
    <string name="eula">END USER LICENSE AGREEMENT</string>
    <string name="eula_confirmation_text_3">By clicking “Accept” button: I confirm that I have read the Privacy Policy and that I agree to the terms of the End User License Agreement (EULA).</string>
    <string name="last_cal">Last Cal</string>
    <string name="model_number">Model Number</string>
    <string name="name">Name</string>
    <string name="phase_start">Phase Start</string>
    <string name="rssi_value">RSSI</string>
    <string name="serial_number">Serial Number</string>
    <string name="version_number">Firmware Version</string>
    <string name="vibration">Vibration</string>
</resources>