<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/box_margin"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/header_section" android:padding="@dimen/event_box_text_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@android:style/Widget.Holo.Button.Borderless">
        <TextView android:textSize="@dimen/large_text" android:textStyle="bold" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/calibration_info" android:layout_toStartOf="@id/arrowOpenClose" />
        <ImageView android:id="@id/arrowOpenClose" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_table_close" android:layout_centerVertical="true" android:layout_marginStart="@dimen/box_margin" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/body_section" android:background="@android:color/white" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <View android:background="@color/blue" android:layout_width="fill_parent" android:layout_height="2.0dip" />
        <RelativeLayout android:padding="@dimen/event_box_text_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/Widget.Holo.Button.Borderless">
            <TextView android:textSize="@dimen/large_text" android:textColor="@android:color/black" android:id="@id/lastCalText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/last_cal" android:layout_centerVertical="true" android:layout_toStartOf="@id/lastCal" android:layout_alignParentStart="true" />
            <TextView android:textSize="@dimen/large_text" android:textColor="@android:color/black" android:id="@id/lastCal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <View android:background="@color/gray_horizontal_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginStart="@dimen/small_margin" android:layout_marginEnd="@dimen/small_margin" />
        <RelativeLayout android:padding="@dimen/event_box_text_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/Widget.Holo.Button.Borderless">
            <TextView android:textSize="@dimen/large_text" android:textColor="@android:color/black" android:id="@id/phaseStartText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phase_start" android:layout_centerVertical="true" android:layout_toStartOf="@id/phaseStart" android:layout_alignParentStart="true" />
            <TextView android:textSize="@dimen/large_text" android:textColor="@android:color/black" android:id="@id/phaseStart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <View android:background="@color/gray_horizontal_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginStart="@dimen/small_margin" android:layout_marginEnd="@dimen/small_margin" />
        <RelativeLayout android:padding="@dimen/event_box_text_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/Widget.Holo.Button.Borderless">
            <TextView android:textSize="@dimen/large_text" android:textColor="@android:color/black" android:id="@id/completedCalText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/completed_cals" android:layout_centerVertical="true" android:layout_toStartOf="@id/completedCal" android:layout_alignParentStart="true" />
            <TextView android:textSize="@dimen/large_text" android:textColor="@android:color/black" android:id="@id/completedCal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <View android:background="@color/gray_horizontal_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginStart="@dimen/small_margin" android:layout_marginEnd="@dimen/small_margin" />
        <RelativeLayout android:padding="@dimen/event_box_text_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/Widget.Holo.Button.Borderless">
            <TextView android:textSize="@dimen/large_text" android:textColor="@android:color/black" android:id="@id/currentPhaseText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/current_phase" android:layout_centerVertical="true" android:layout_toStartOf="@id/currentPhase" android:layout_alignParentStart="true" />
            <TextView android:textSize="@dimen/large_text" android:textColor="@android:color/black" android:id="@id/currentPhase" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <View android:background="@color/blue" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    </LinearLayout>
</LinearLayout>